[package]
name = "grpc-ws-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }

serde_json = "1.0"

base64 = "0.22"

solana-client = { version = "2.3.4" }
solana-sdk = { version = "2.3.1" }
solana-streamer = { version = "2.3.4" }
solana-rpc-client-api = { version = "2.3.4" }
solana-tls-utils = "2.3.4"
solana-quic-definitions = "2.3.1"

solana-commitment-config = "2.2.1"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
futures-util = "0.3.31"
futures = "0.3.31"
anyhow = "1.0.98"
tokio-util = "0.7.15"
